--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/antd/3.10.1/antd.min.css">
   </head>
   <body>
     <div id="app"></div>
