[fix] 支持菜单定位 related to issue #1

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/antd/3.10.1/antd.min.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="height: 100%;"></div>
   </body>
 </html>
