--- a/dev/index.html
+++ b/dev/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <div id="app" style="height: 100%;"></div>
+    <script src="http://localhost:8080/libs/test.js"></script>
   </body>
 </html>
